--- a/employee-service/src/main/resources/application.yaml
+++ b/employee-service/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  application:
+    name: EMPLOYEE-SERVICE
+
   datasource:
     url: jdbc:postgresql://localhost:5432/employee_db
     username: postgres
@@ -11,3 +14,9 @@ spring:
       ddl-auto: update
 server:
   port: 8081
+eureka:
+  instance:
+    client:
+      serverUrl:
+        defaultZone: http://localhost:8761/eureka/
+
